--- a/pea-projekt/projekt3/projekt3.tex
+++ b/pea-projekt/projekt3/projekt3.tex
@@ -234,8 +234,11 @@ Algorytm genetyczny pozwala na znalezienie przybliżonego rozwiązania problemu 
 
 \newpage
 \section{Porównanie}
-\paragraph{} % (fold)
+\paragraph{}
 Ostatnim etapem projektu jest porównanie algorytmów symulowanego wyżarzania, tabu search oraz algorytmu genetycznego pod względem dokładności otrzymanych wyników oraz czasu wynonywania.
+
+\paragraph{}
+W punkcie 7.1 przedstawione zostały średnie czasy wykonywania algorytmów w zależności od rozmiaru instancji oraz zadanych parametrów, natomiast w pkt. 7.2 badana jest średnia wartość najlepszych rozwiązań dla każdego rozmiaru instancji, przy takim samym kryterium doboru parametrów.
 
 \label{par:}
 \subsection{Porównanie średniego czasu wykonywania algorytmów}
@@ -337,10 +340,10 @@ Ostatnim etapem projektu jest porównanie algorytmów symulowanego wyżarzania, 
 Po przprowadzeniu analizy testów zarówno czasu wykonywania algorytmów jak i różnicy od wartości optymalnej najlepszym algorytmem okazują się algorytm symulowanego wyżarzania. Nie tylko uzyskał on wyniki najbardziej zbliżone do optymalnych w najkrótszym czasie, ale jest także najprostszym algorytmem w implementacji spośród omawianych.
 
 \paragraph{}
-Algorytmy tabu search i genetyczne, mimo iż cieszą się wiekszy uznaniem, wiążą się z dobraniem szeregu parametrów, od których zalezy jakość rozwiązania. Nie jest to zadanie trywialne i wymaga od programisty przeprowadzenia szeregu testów na optymalność wyniku. Są również podatne na "utknięcie" w lokalnym minimum, dlatego należy zadbać o odpowiednią metodę dywersyfikacji rozwiązań.
+Algorytmy tabu search i genetyczne, mimo iż cieszą się większym uznaniem, wiążą się z dobraniem szeregu parametrów, od których zależy jakość rozwiązania. Nie jest to zadanie trywialne i wymaga od programisty przeprowadzenia szeregu testów na optymalność wyniku. Są również podatne na "utknięcie" w lokalnym minimum, dlatego należy zadbać o odpowiednią metodę dywersyfikacji rozwiązań.
 
 \paragraph{}
-Spośród przedstawionych algorytmów, algorytm symulowanego wyżarzania najlepiej sprawdzi się w sytuacji kiedy rozwiązani danego problemu jest potrzebne w krótkim czasie, a duża dokładności wyników nie jest wymagana. W przeciwnym wypadku należy przeprowadzić bardziej dogłębne badania nad doborem parametrów i metody wyznaczania sąsiedztwa lub krzyżowania osobników dla algorytmów genetycznych oraz tabu search.
+Spośród przedstawionych algorytmów, algorytm symulowanego wyżarzania najlepiej sprawdzi się w sytuacji kiedy rozwiązanie danego problemu jest potrzebne w krótkim czasie, a duża dokładność wyników nie jest wymagana. W przeciwnym wypadku należy przeprowadzić bardziej dogłębne badania nad doborem parametrów i metody wyznaczania sąsiedztwa lub krzyżowania osobników dla algorytmów genetycznych oraz tabu search.
 
 \end{document}
 
