--- a/semestr-vi/esystemy/esystemy.tex
+++ b/semestr-vi/esystemy/esystemy.tex
@@ -90,7 +90,7 @@
   \end{itemize}
   \section{Podział zadań}
   \paragraph{}
-  W pracy nad projektem zamierzamy wykorzystać metodologię SCRUM, która zakłada podział projektu na małe zadania, nie moduły. Z tego względu nie jesteśmy wstanie określić kto będzie się zajmował jaką częścią projektu. Taski będą wmiarę postępu pracy przypisane członką zespołu.
+  W pracy nad projektem zamierzamy wykorzystać metodologię SCRUM, która zakłada podział projektu na małe zadania, nie moduły. Z tego względu nie jesteśmy wstanie określić kto będzie się zajmował jaką częścią projektu. Taski będą w miarę postępu prac przypisane członkom zespołu.
   \paragraph{}
   Oprócz wyżej wymienionych funkcjonalności w projekcie należy również zadbać o frontend i testy całego systemu. 
 
