--- a/semestr-vi/esystemy/esystemy.tex
+++ b/semestr-vi/esystemy/esystemy.tex
@@ -45,10 +45,10 @@
 \maketitle
   \section{Opis projektu}
   \paragraph{}
-  Celem projektu jest napisanie systemu, pozwalającego użytkownikowi na zakładanie i porwadzenie mikroblogów wraz zmożliwością po Aplikacja zostanie napisana w języku jruby z wykorzystaniem framework'a Ruby on Rails.
+  Celem projektu jest stworzenie portalu, pozwalającego użytkownikowi na zakładanie i porwadzenie mikroblogów wraz zmożliwością follow'ania wpisów innych użytkowników. Aplikacja zostanie napisana w języku ruby z wykorzystaniem framework'a Ruby on Rails.
   \begin{itemize}
     \item Platforma : JVM
-    \item Język impementacji : jruby, coffescript
+    \item Język impementacji : ruby, coffescript
     \item Framework : Ruby on Rails 
   \end{itemize}
   \section{Funkcjonalności systemu}
@@ -71,7 +71,6 @@
    \item Obsługa postów
     \begin{itemize}
       \item Dodawanie posta
-      \item Edycja posta
       \item Usuwanie posta
     \end{itemize}
   \item Dyskusje
@@ -90,7 +89,7 @@
   \end{itemize}
   \section{Podział zadań}
   \paragraph{}
-  W pracy nad projektem zamierzamy wykorzystać metodologię SCRUM, która zakłada podział projektu na małe zadania, nie moduły. Z tego względu nie jesteśmy wstanie określić kto będzie się zajmował jaką częścią projektu. Taski będą w miarę postępu prac przypisane członkom zespołu.
+  W pracy nad projektem zamierzamy wykorzystać metodologię SCRUM, która zakłada podział projektu na małe zadania, nie moduły. Z tego względu nie jesteśmy wstanie określić kto będzie się zajmował jaką częścią projektu. Zadania będą w miarę postępu prac przypisane członkom zespołu.
   \paragraph{}
   Oprócz wyżej wymienionych funkcjonalności w projekcie należy również zadbać o frontend i testy całego systemu. 
 
