sterowniki lab1 spr

--- a/semestr-vi/sterowniki/lab001/spr/lab1.tex
+++ b/semestr-vi/sterowniki/lab001/spr/lab1.tex
@@ -45,5 +45,9 @@
 \maketitle
   \section{Cel laboratorium}
   \paragraph{}
-  
+  Celem laboratorium było zapoznanie się z podstawowymi operacjami wejścia/wyjścia.
+
+  \section{Kodzik}
+  \lstinputlisting{../lab001.c}
+
 \end{document}
