--- a/semestr-vi/esystemy/esystemy.tex
+++ b/semestr-vi/esystemy/esystemy.tex
@@ -6,7 +6,7 @@
 
 
 \title{Inżynieria e-systemów java}
-\author{Tymon Tobolski (181037)\\ Jacek Wieczorek (181043) \\ Mateusz Lenik()}
+\author{Tymon Tobolski (181037)\\ Jacek Wieczorek (181043) \\ Mateusz Lenik(181142)}
 
 % Title page layout (fold)
 \makeatletter
