--- a/semestr-vi/sterowniki/lab001/spr/lab1.tex
+++ b/semestr-vi/sterowniki/lab001/spr/lab1.tex
@@ -45,9 +45,12 @@
 \maketitle
   \section{Cel laboratorium}
   \paragraph{}
-  Celem laboratorium było zapoznanie się z podstawowymi operacjami wejścia/wyjścia.
+  Celem laboratorium było zapoznanie się z podstawowymi operacjami wejścia/wyjścia na mikrokontrolerze Atmega 328p.
 
-  \section{Kodzik}
+  \section{Kod źródłowy}
   \lstinputlisting{../lab001.c}
 
+  \section{Wnioski}
+  \paragraph{}
+  Operacje wejścia i wyjścia polegające na zapalaniu diod lub obsłudze przycisku nie są skomplikowanym zadaniem. Ważnym czynnikiem jest mechanizmie \textit{pull up}, który zapobiega przekłamaniom wskazania czy przycisk jest wciśnięty, czy nie. Mozna to zrobić na dwa sposoby : systemowo (jak pokazane zosyało na listingu programu), lub elektronicznie za pomocą kondensatora.
 \end{document}
