--- a/semestr-vi/sterowniki/lab001/spr/lab1.tex
+++ b/semestr-vi/sterowniki/lab001/spr/lab1.tex
@@ -52,5 +52,6 @@
 
   \section{Wnioski}
   \paragraph{}
-  Operacje wejścia i wyjścia polegające na zapalaniu diod lub obsłudze przycisku nie są skomplikowanym zadaniem. Ważnym czynnikiem jest mechanizmie \textit{pull up}, który zapobiega przekłamaniom wskazania czy przycisk jest wciśnięty, czy nie. Mozna to zrobić na dwa sposoby : systemowo (jak pokazane zosyało na listingu programu), lub elektronicznie za pomocą kondensatora.
+  Operacje wejścia i wyjścia polegające na zapalaniu diod lub obsłudze przycisku nie są skomplikowanym zadaniem.
+  Ważnym czynnikiem jest mechanizm \textit{pull up}, który zapobiega przekłamaniom wskazania czy przycisk jest wciśnięty, czy nie. Mozna to zrobić na dwa sposoby : systemowo (jak pokazane zostało na listingu programu), lub elektronicznie za pomocą kondensatora.
 \end{document}
