--- a/doc/esystemy.tex
+++ b/doc/esystemy.tex
@@ -130,6 +130,16 @@
     \subsection{Views}
     \paragraph{}
     Wszelkei widoki zostały napisane przy uzyciu języka znaczników \textit{Haml}. W celu generowania formularzy użyty został gem \textit{SimpleForm}, a cały layout oparty o bibliotekę styli css - \textit{Bootstrap}. Skrypty wykorzystujące \textit{jQuery}, napisane zostały przy pomocy języka \textit{CoffeScript}, kompilowalnego do kodu javascript.
+
+    \paragraph{}
+    Wykorzystane biblioteki js i css :
+    \begin{itemize}
+      \item bootstrap css
+      \item bootstrap tabs
+      \item facebox
+      \item jQuery
+      \item jQuery ui
+    \end{itemize}
     
     \subsection{Model}
     \paragraph{}
