--- a/doc/rozproszone.tex
+++ b/doc/rozproszone.tex
@@ -199,7 +199,7 @@ za renderowanie obrazków, wykorzystuje swoje zasoby procesora i pamięci w maks
 powiedzieć o reszcie workerów, odpowiedzialnych za obliczenia.
 
 \paragraph{}
-W obecnym systemie, proces rozdzeilanai zadań opiera się standardowy system lefleta, czyli podziału obrazu na kwadratowe
+W obecnym systemie, proces rozdzielania zadań opiera się o standardowy system lefleta, czyli podziału obrazu na kwadratowe
 płytki, a każda stacja robocza zwraca wygenerowany fragment. Jest to znacznie bardziej wydajny system pozwalający na dobranie
 większej liczby parametrów.
 
